--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<div class="container-fluid d-flex align-items-center justify-content-center h-100">
 					<div class="row d-flex justify-content-center text-center">
 						<div class="col-md-10 col-sm-8">
-							<h2 class="display-4 font-weight-bold white-text pt-5 mb-2">Хочешь получать пасcивный доход?</h2>
+							<h2 class="disp font-weight-bold white-text pt-5 mb-2">Хочешь получать пасcивный доход?</h2>
 							<hr class="hr-light" style="width: 80%;">
 							<h4 class="white-text my-4">Инвестируй вместе с нами.</h4>
 							<a href="#info"><button class="btn btn-outline-white waves-effect waves-light">Read more</button></a>
